_includes/css/main.css
html { box-sizing: border-box; }
*, *:before, *:after { box-sizing: inherit; }

/* ---------------------------*/
/* ----- Special Styles ----- */
/* ---------------------------*/

/* ----- colors (autogenerated from _config.yml)----- */

{% for c in site.colors %}
.border-{{c[0]}} { border-color: {{ c[1] }} !important; }
.text-{{c[0]}}   { color: {{ c[1] }}; }
.text-{{c[0]}} a { color: {{ c[1] }}; }
/*.bg-{{c[0]}}     { background-color: {{ c[1] }} !important; }*/
{% endfor %}

/* ----- per-post colors! ----- */
{% for node in site.posts %}
  {% capture id %}{{ node.id | remove:'/' | downcase }}{% endcapture %}
  {% capture bg %}{% if site.colors[node.bg] %}{{ site.colors[node.bg] }}{% else %}{{ node.bg }}{% endif %}{% endcapture %}
  {% capture fg %}{% if site.colors[node.color] %}{{ site.colors[node.color] }}{% else %}{{ node.color }}{% endif %}{% endcapture %}
  nav .p-{{id}} { border-color: {{ bg }}; }
  #{{id}} { background-color: {{ bg }} !important; color: {{ fg }}; }
  #{{id}} a { color: {{ fg }}; }
  #{{id}} .sectiondivider { color: {{ bg }}; }
{% endfor %}


/* ----- code, syntax highlighting, etc ----- */

code, pre { font-family: Monaco, Menlo, Consolas, "Courier New", monospace; }

/* spesifically inline code */
code, pre {
  background: rgba(255,255,255,0.2);
  display: inline;
  word-wrap: break-word;
}

/* block code */
pre code { background: none; display: block; }
pre {
  display: block;
  margin: 20px 5%;
  padding: 4px 8px;
  background: rgba(255,255,255,0.1);
  word-wrap: break-word;
}

.highlight { margin:20px 5%; }


/* ----- base elements ----- */

img {
  max-width:100%!important;
  height:auto;
  vertical-align:middle;
}

hr {
  margin:60px auto;
  width:50%;
  border-color: {{ site.colors.black }};
}

.container { word-wrap: break-word; }
.center { text-align: center; }
.left, .container .left { text-align: left; }

.container h1, .container h2, .container h3, .container h4 {
  margin-bottom: 20px;
  text-align: center;
  padding: 0 4%;
}
.container p, .container ol, .container ul {
  font-size: 17px;
  padding: 0 5%;
}
.container ol, .container ul { padding: 0 8%; }
.container p:first-of-type {
    margin-top: 40px;
}

/* keep embedded videos fluid! */
.icontain {
  position: relative;
  height: 0;
  overflow: hidden;
  padding-bottom: 56.25%; /* keep 16x9 Aspect Ratio */
}
.i4x3 { padding-bottom: 75.00%; } /* keep 4x3 Aspect Ratio */
.icontain iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}

.inlineblock {
  display:-moz-inline-stack;
  display:inline-block;
  zoom:1;
  *display:inline;
}

/* ---------------------------*/
/* ----- Main Structure ----- */
/* ---------------------------*/

/* ----- top menu ----- */

{% assign navborder = 0 %}
{% assign navborder_active = 8 %}

nav {
  font-size:15px;
  width:100%;
  position:fixed;
  z-index:100;
  top:0;
  left:0;
  background:#2e2e2e;
}

nav ul {
  list-style:none;
  text-align:center;
  padding:0;
  margin:0;
  letter-spacing:-4px;
}

nav ul li {
  display:inline-block;
  border-top:{{navborder}}px solid;
  padding: {{navborder}}px;
  *display:inline;
  zoom:1;
  line-height:normal;
  letter-spacing:normal;
  text-transform:uppercase;
  min-width:110px;
  line-height:60px;
  margin:0;
}

nav ul li a, nav ul li a:visited {
  display:block;
  color:#fff;
  text-decoration:none;
  font-weight:600;
  opacity:.75;
}

nav ul li a:hover {
  opacity:1
}
nav ul li:hover, nav ul li.active {
  border-top-width: {{navborder_active}}px;
  padding-top: 0;
}


/* ----- sections/articles ----- */

.section {
  position:relative;
  display:block;
  width:100%;
  min-height:300px;
  padding:210px 0;
  /*background-image:url({{ post.bg-img }});*/
  /*background:url(img/bgnoise.png);*/
  /* generated noise from noisetexturegenerator.com */
}

.section:first-of-type {
    padding-top: 60px;
}


#footer {
  padding: 8px 0;
  min-height:0;
  text-align:center;
  background-color:#2e2e2e;
  background-image:none;
}
#footer .container p { font-size:13px; margin:0; }

.subtlecircle {
  text-align:center;
  z-index:3;
  border-radius:50%;
  -moz-border-radius:50%;
  -webkit-border-radius:50%;
  box-shadow: 0px 1px 15px rgba(0,0,0,0.05);
  background:url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAF0lEQVQIHWP8//+/MQMaYELjg7kUCgIASm8DOqGzfp8AAAAASUVORK5CYII=);
}

.sectiondivider {
  width:270px;
  height:270px;
  padding:15px;
  position:absolute;
  top:-135px;
  left:50%;
  margin-left:-135px;
}

.sectiondivider img {
  width:200px;
  height:240px;
  position: static;
  margin-top: -20px;
}

.sectiondivider .fa-stack {
  font-size: 130px;
  position: static;
  margin-top: -8px;
}
.sectiondivider .fa-circle { color: #fff; }

.sectiondivider h5 {
  font-size:15px;
  font-weight:700;
  text-transform:uppercase;
  position:absolute;
  bottom:50px;
  left:auto;
  text-align:center;
  display:block;
  z-index:6;
  width:240px;
}

.sectiondivider.imaged {
  text-shadow: 1px 1px 3px #333;
}


.columned {
  -webkit-column-count: 3;
  -moz-column-count:    3;
  column-count:         3;

  -webkit-column-gap: 40px;
  -moz-column-gap:    40px;
  column-gap:         40px;

  -webkit-column-rule: 1px outset rgba(255,255,255,0.5);
  -moz-column-rule:    1px outset rgba(255,255,255,0.5);
  column-rule:         1px outset rgba(255,255,255,0.5);
}
.longlist { font-size: 14px !important; }
.longlist li { margin-bottom: 3px; }



/* mid size (tablets, landscapes) */
@media only screen and (max-width: 679px) {
  nav { font-size:11px; }
  nav ul li {
    min-width:60px;
    line-height:40px;
  }
}

/* tiny size (phones) */
@media only screen and (max-width: 380px) {
  nav ul li { min-width:90px; line-height:20px; }
}

/* anything not desktop */
@media only screen and (max-width: 767px) {
	.container h1 { font-size: 30px; }
	.container h2 { font-size: 24px; }
	.container h3 { font-size: 20px; }
	.container h4 { font-size: 18px; }


  .section { padding:130px 0; }
  .sectiondivider {
    width:200px;
    height:200px;
    padding:15px;
    top:-100px;
    margin-left:-100px;
  }
  .sectiondivider img {
    width:150px;
    height:180px;
  }
  .sectiondivider .fa-stack {
    font-size: 100px;
    margin-top: -14px;
  }
  .sectiondivider h5 {
    font-size:15px;
    bottom:30px;
    width:170px
  }

  .columned {
    -webkit-column-count: 2;
    -moz-column-count:    2;
    column-count:         2;
  }
}


/*-- Extra.css contents*/

 .sm-padding {
    padding: 10px;
}
.sm-hover:hover {
    -webkit-transform: scale(1.3);
    transform: scale(1.3);
    -webkit-transition: .3s ease-in-out;
    transition: .3s ease-in-out;
    /*background: yellowgreen;    */
}

.center-image {
    margin: 0 auto;
    display: block;
}

.pad-spo {
    padding: 20px;
}

/* ---------- */
.no-padding {
    padding: 0;
}

.no-gutter > [class*=col-] {
    padding-right: 0;
    padding-left: 0;
}

.portfolio-box {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 650px;
}

.portfolio-box .portfolio-box-caption {
    display: block;
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 100%;
    text-align: center;
    color: #fff;
    opacity: 0;
    background: rgba(128,128,128,.9);
    -webkit-transition: all .35s;
    -moz-transition: all .35s;
    transition: all .35s;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
    position: absolute;
    top: 50%;
    width: 100%;
    text-align: center;
    transform: translateY(-50%);
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    padding: 0 15px;
    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 600;
}

.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    font-size: 18px;
}

.portfolio-box:hover .portfolio-box-caption {
    opacity: 1;
}


/*make links great(hot) again*/
.hot-link {
    color: #1A0DAB;
    text-decoration: none;
    
}
.hot-link:hover, .hot-link:active {
    background-color: yellow;
    text-decoration: none;
}

/*timer text style*/
#clockdiv{
    font-family: sans-serif;
    color: #fff;
    display: inline-block;
    font-weight: 100;
    text-align: center;
    font-size: 30px;
}

#clockdiv > div{
    display: inline-block;
}

#clockdiv div > span{
    border-radius: 3px;
    display: inline-block;
}

.clockdiv-bg {
    /*background-color: black;*/
    /*opacity: 0.8;*/
    font-size: 50px;
}

/*fonts */

.roboto {
    font-family: Roboto;
}

.aclonica {
    font-family: Aclonica;
}

.orbitron {
    font-family: Orbitron;
}
/*a:hover {*/
     /*border glow effect on hover*/
     /*box-shadow: 0px 0px 20px #000;*/
     /*filter:progid:DXImageTransform.Microsoft.Glow(Color=black,Strength=20);*/
/*}*/

/*a:hover {*/
     /*glow effect on hover */
     /*text-shadow: -1px 1px 20px #ffc, 1px -1px 20px #fff;*/

    /*-webkit-transition: text-shadow 250ms linear 0s;*/
    /*-moz-transition: text-shadow 250ms linear 0s;*/
    /*-o-transition: text-shadow 250ms linear 0s;*/
    /*transition: text-shadow 250ms linear 0s;*/
/*}*/

/*.shadow {
	border: 1px solid #ccc;
	}

.shadow:hover {
	-moz-box-shadow: 0 0 5px rgba(0,0,0,0.5);
	-webkit-box-shadow: 0 0 5px rgba(0,0,0,0.5);
	box-shadow: 0 0 5px rgba(0,0,0,0.5);
	}*/

